--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,13 @@
 .standout {
   box-shadow: rgb(0,0,0,0.16) 0px 1px 4px, rgb(51,51,51) 0px 0px 0px 3px;
 }
+
+h1,h2,h3,h4,h5,p {
+  text-align: center
+}
+
+@media only screen and (max-width: 600px) {
+  .card-collection {
+    grid-template-columns : 1fr;
+  }
+}
